--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     <title>Dice Roller</title>
 </head>
 
-<body>
+<body style="overflow-y: hidden">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
